--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "com.ugf.package.name",
-  "displayName": "UGF.Package.Name",
+  "name": "com.ugf.models",
+  "displayName": "UGF.Models",
   "version": "0.0.0-preview",
   "unity": "2020.2",
   "apiCompatibility": ".NET Standard 2.0",
-  "description": "No description.",
+  "description": "Provides utilities to work with data models.",
   "author": {
-      "name": "Unity Game Framework",
-      "url": "https://github.com/unity-game-framework"
+    "name": "Unity Game Framework",
+    "url": "https://github.com/unity-game-framework"
   },
   "repository": {
     "type": "git",
-    "url": "git://github.com/unity-game-framework/ugf-draft.git"
+    "url": "git://github.com/unity-game-framework/ugf-models.git"
   },
-  "changelogUrl": "https://github.com/unity-game-framework/ugf-draft/blob/master/changelog.md",
-  "licensesUrl": "https://github.com/unity-game-framework/ugf-draft/blob/master/license",
+  "changelogUrl": "https://github.com/unity-game-framework/ugf-models/blob/master/changelog.md",
+  "licensesUrl": "https://github.com/unity-game-framework/ugf-models/blob/master/license",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/@unity-game-framework"
   },
