--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -18,5 +18,8 @@
   "publishConfig": {
     "registry": "https://unitygameframework.jfrog.io/artifactory/api/npm/default"
   },
-  "dependencies": {}
+  "dependencies": {
+    "com.ugf.module.controllers": "2.0.0",
+    "com.ugf.runtimetools": "2.5.0"
+  }
 }
