--- a/Packages/UGF.Models/Editor/UGF.Models.Editor.asmdef
+++ b/Packages/UGF.Models/Editor/UGF.Models.Editor.asmdef
@@ -2,7 +2,8 @@
     "name": "UGF.Models.Editor",
     "rootNamespace": "UGF.Models.Editor",
     "references": [
-        "GUID:364cf8fe90f9b164abe18f1d5e11f862"
+        "GUID:364cf8fe90f9b164abe18f1d5e11f862",
+        "GUID:abdd615e45137c74ca2ce9c636c78c15"
     ],
     "includePlatforms": [
         "Editor"
