--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -19,7 +19,6 @@
     "registry": "https://unitygameframework.jfrog.io/artifactory/api/npm/default"
   },
   "dependencies": {
-    "com.ugf.module.controllers": "2.1.1",
-    "com.ugf.runtimetools": "2.5.0"
+    "com.ugf.module.controllers": "4.0.0-preview.3"
   }
 }
