--- a/Assets/UGF.Models.Runtime.Tests/UGF.Models.Runtime.Tests.asmdef
+++ b/Assets/UGF.Models.Runtime.Tests/UGF.Models.Runtime.Tests.asmdef
@@ -9,7 +9,8 @@
         "GUID:364cf8fe90f9b164abe18f1d5e11f862",
         "GUID:da1be3aee4da18e48b169c9d8ccca92e",
         "GUID:16fde9420ef50f34db61e711e19381dd",
-        "GUID:27619889b8ba8c24980f49ee34dbb44a"
+        "GUID:27619889b8ba8c24980f49ee34dbb44a",
+        "GUID:088d00b6871540e44bce58af1a3f0f17"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
