--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.ugf.models",
   "displayName": "UGF.Models",
-  "version": "2.0.0-preview",
+  "version": "2.0.0-preview.1",
   "unity": "2022.1",
   "apiCompatibility": ".NET Standard 2.1",
   "description": "Provides utilities to work with data models.",
