--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -19,7 +19,7 @@
     "registry": "https://unitygameframework.jfrog.io/artifactory/api/npm/default"
   },
   "dependencies": {
-    "com.ugf.module.controllers": "4.0.0-preview.6",
-    "com.ugf.editortools": "2.14.0"
+    "com.ugf.module.controllers": "4.0.0",
+    "com.ugf.editortools": "2.15.0"
   }
 }
