--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -19,7 +19,7 @@
     "registry": "https://api.upmhub.org/registries/unity-game-framework"
   },
   "dependencies": {
-    "com.ugf.module.controllers": "4.0.0",
+    "com.ugf.builder": "2.0.2",
     "com.ugf.editortools": "2.15.0"
   }
 }
