--- a/Packages/UGF.Models/Editor/UGF.Models.Editor.asmdef
+++ b/Packages/UGF.Models/Editor/UGF.Models.Editor.asmdef
@@ -3,7 +3,10 @@
     "rootNamespace": "UGF.Models.Editor",
     "references": [
         "GUID:364cf8fe90f9b164abe18f1d5e11f862",
-        "GUID:abdd615e45137c74ca2ce9c636c78c15"
+        "GUID:abdd615e45137c74ca2ce9c636c78c15",
+        "GUID:088d00b6871540e44bce58af1a3f0f17",
+        "GUID:c54ebf9bf71849f4b97d2be9494ec7ad",
+        "GUID:6c7389a7d4bbed54e96eb1e71a69798e"
     ],
     "includePlatforms": [
         "Editor"
