--- a/Packages/UGF.Models/package.json
+++ b/Packages/UGF.Models/package.json
@@ -20,7 +20,7 @@
   },
   "dependencies": {
     "com.ugf.builder": "2.0.2",
-    "com.ugf.editortools": "3.0.0-preview",
-    "com.ugf.assets": "1.0.0-preview"
+    "com.ugf.editortools": "3.0.0-preview.2",
+    "com.ugf.assets": "1.0.0-preview.2"
   }
 }
